Make copyright declaration consistent

--- a/about.en-US.html
+++ b/about.en-US.html
@@ -85,7 +85,7 @@ dd{margin-left:2em;margin-bottom:1em;}
 <body>
 <h1>HTML5 Word Cloud</h1>
 
-<p>Copyright 2011, 2013 <a href="http://timdream.org/">Timothy Guan-tin Chien</a> and other contributors.
+<p>Copyright 2011, 2013-2019 <a href="https://timdream.org/">Timothy Guan-tin Chien</a> and other contributors.
 Released under <a href="./MIT-LICENSE.txt">the MIT license</a>.</p>
 
 <p><a href="https://github.com/timdream/wordcloud">Source code</a> available on Github.
