--- a/about.zh-TW.html
+++ b/about.zh-TW.html
@@ -85,7 +85,7 @@ dd{margin-left:2em;margin-bottom:1em;}
 <body>
 <h1>HTML5 文字雲</h1>
 
-<p>版權所有 2011, 2013 <a href="http://timdream.org/">Timothy Guan-tin Chien</a> 與其他貢獻者。
+<p>版權所有 2011, 2013-2019 <a href="https://timdream.org/">Timothy Guan-tin Chien</a> 與其他貢獻者。
 本作品使用 <a href="./MIT-LICENSE.txt">MIT 公眾授權</a>釋出。</p>
 
 <p><a href="https://github.com/timdream/wordcloud">程式碼</a>可於 Github 取得。
