timdream.org/wordcloud -> wordcloud.timdream.org

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
   <meta property="og:description" content="Get the most frequent terms in an tag cloud representation, powered by HTML5." />
 
   <!-- Unfortunately we need to hard-code these in HTML -->
-  <meta property="og:url" content="http://timdream.org/wordcloud/" />
+  <meta property="og:url" content="https://wordcloud.timdream.org/" />
   <meta property="og:title" content="HTML5 Word Cloud" />
   <meta property="fb:admins" content="541998202" />
   <meta property="fb:app_id" content="221493074531416" />
 
-  <meta property="og:image" content="http://timdream.org/wordcloud/assets/images/wordcloud-logo.png" />
+  <meta property="og:image" content="https://wordcloud.timdream.org/assets/images/wordcloud-logo.png" />
   <meta property="og:image:width" content="432" />
   <meta property="og:image:height" content="432" />
-  <meta property="og:image" content="http://timdream.org/wordcloud/assets/images/wordcloud-logo-128.png" />
+  <meta property="og:image" content="https://wordcloud.timdream.org/assets/images/wordcloud-logo-128.png" />
   <meta property="og:image:width" content="128" />
   <meta property="og:image:height" content="128" />
-  <meta property="og:image" content="http://timdream.org/wordcloud/assets/images/wordcloud-logo-75.png" />
+  <meta property="og:image" content="https://wordcloud.timdream.org/assets/images/wordcloud-logo-75.png" />
   <meta property="og:image:width" content="75" />
   <meta property="og:image:height" content="75" />
-  <meta property="og:image" content="http://timdream.org/wordcloud/assets/images/wordcloud-logo-16.png" />
+  <meta property="og:image" content="https://wordcloud.timdream.org/assets/images/wordcloud-logo-16.png" />
   <meta property="og:image:width" content="16" />
   <meta property="og:image:height" content="16" />
 
@@ -120,7 +120,7 @@
 Word Cloud can no longer fetch Google/Facebook data automatically.</p>
             </div>
             <div class="alert alert-block alert-info only-en-US">
-              <h4><a href="http://wordcloud2-js.timdream.org/">Word cloud for developers</a></h4>
+              <h4><a href="https://wordcloud2-js.timdream.org/">Word cloud for developers</a></h4>
 A demo page is available for fine-grain control of the backend library.</p>
             </div>
 
@@ -129,7 +129,7 @@ A demo page is available for fine-grain control of the backend library.</p>
               <p>您可以使用右方的選項直接提供文字或檔案給文字雲。文字雲無法直接抓取您在 Facebook 或是 Google 的資料。</p>
             </div>
             <div class="alert alert-block alert-info only-zh-TW">
-              <h4><a href="http://wordcloud2-js.timdream.org/">進階開發者的文字雲</a></h4>
+              <h4><a href="https://wordcloud2-js.timdream.org/">進階開發者的文字雲</a></h4>
 您可以使用函式庫的範例頁面做文字雲產生的細節設定。</p>
             </div>
 
