--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/e106b74a.wordcloud.css">
 
-  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=k3ifur8p" />
+  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=k3ifx8ss" />
 
   <link rel="payment" href="https://flattr.com/submit/auto?url=https%3A%2F%2Fgithub.com%2Ftimdream%2Fwordcloud&amp;user_id=timdream" type="text/html" />
 
   <!-- For browser without Web Workers support, run the calculation
        on the main event loop with the worker script. -->
-  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=k3ifur8p" defer></script>
+  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=k3ifx8ss" defer></script>
 
   <script defer src="assets/88ccfa37.app.min.js"></script>
 
