--- a/about.zh-TW.html
+++ b/about.zh-TW.html
@@ -101,11 +101,10 @@ dd{margin-left:2em;margin-bottom:1em;}
 
 <h3>資料收集</h3>
 
-<p>為了在未來的版本提供更好的使用者體驗，此站使用 Google Analytics 收集一般網站的連線紀錄與其他無法辨識個人身分之操作紀錄（如：分享圖片）。
+<p>為了在未來的版本提供更好的使用者體驗，此站收集一般網站的連線紀錄與其他無法辨識個人身分之操作紀錄（如：分享圖片）。
 另外，會收集製作圖片的資料來源資訊。</p>
 
-<p>這些資訊不會透漏給本站作者與貢獻者以外的第三方。
-閱讀 <a href="https://www.google.com/analytics/learn/privacy.html">Google Analytics 安全性與隱私權原則</a>以了解 Google 如何使用此類資訊。</p>
+<p>這些資訊不會透漏給本站作者與貢獻者以外的第三方。</p>
 
 <h3>第三方網路服務</h3>
 
