--- a/about.en-US.html
+++ b/about.en-US.html
@@ -101,11 +101,8 @@ Everything is processed on your computer directly, employed technologies in the 
 
 <h3>Information collected</h3>
 
-<p>In order to improve user experience based on the usage, Google Analytics is used to collect common website metrics, and record usage of other non-identifiable operations (e.g. Sharing image).
+<p>In order to improve user experience based on the usage, the website collects common metrics, and record usage of other non-identifiable operations (e.g. Sharing image).
 Additionally, the identifier of the source selected to generated the image will be collected.</p>
-
-<p>These information will not be shared with people other than the author and contributors.
-Read <a href="https://www.google.com/analytics/learn/privacy.html">Google Analytics security and privacy principles</a> on how Google utilize these data.</p>
 
 <h3>External Services</h3>
 
