--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/e106b74a.wordcloud.css">
 
-  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=kb4jj6t7" />
+  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=kkkk0jid" />
 
   <link rel="payment" href="https://flattr.com/submit/auto?url=https%3A%2F%2Fgithub.com%2Ftimdream%2Fwordcloud&amp;user_id=timdream" type="text/html" />
 
   <!-- For browser without Web Workers support, run the calculation
        on the main event loop with the worker script. -->
-  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=kb4jj6t7" defer></script>
+  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=kkkk0jid" defer></script>
 
-  <script defer src="assets/e34dddad.app.min.js"></script>
+  <script defer src="assets/4d2de108.app.min.js"></script>
 
 </head>
 <body>
