--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset=UTF-8>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>HTML5 Word Cloud</title>
 
@@ -14,6 +13,7 @@
   <meta property="og:description" content="Get the most frequent terms in an tag cloud representation, powered by HTML5." />
 
   <!-- Unfortunately we need to hard-code these in HTML -->
+  <meta property="canonical" href="https://wordcloud.timdream.org/" />
   <meta property="og:url" content="https://wordcloud.timdream.org/" />
   <meta property="og:title" content="HTML5 Word Cloud" />
   <meta property="fb:admins" content="541998202" />
