correct canonical url

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="Get the most frequent terms in an tag cloud representation, powered by HTML5." />
 
   <!-- Unfortunately we need to hard-code these in HTML -->
-  <meta property="canonical" href="https://wordcloud.timdream.org/" />
+  <link rel="canonical" href="https://wordcloud.timdream.org/" />
   <meta property="og:url" content="https://wordcloud.timdream.org/" />
   <meta property="og:title" content="HTML5 Word Cloud" />
   <meta property="fb:admins" content="541998202" />
